raffia/tests/error/scss/value/interpolation/semicolon.snap
---
source: raffia/tests/error.rs
---
error: expect token `}`, but `;` received
  ┌─ semicolon.scss:1:14
  │
1 │ $foo: #{bar();};
  │              ^


